# RSIDBuildTranslator

./: .gitignore  LICENSE  README.md  RSIDBuildTranslator.py  cli.py  main.py  pyproject.toml  utils.py
.github/workflows/: publish-to-test-pypi.yml  run-tests.yml  test-and-publish.yml
modes/: mode_chrpos37.py  mode_chrpos38.py  mode_rsid.py
src/RSIDBuildTranslator/: main.py  pytest.ini  utils.py
src/RSIDBuildTranslator/modes/: mode_chrpos37.py  mode_chrpos38.py  mode_rsid.py
tests/: test_make_checks.py  test_mode_chrpos37.py  test_mode_chrpos38.py  test_mode_rsid.py
